--- a/snake/index.html
+++ b/snake/index.html
@@ -17,6 +17,6 @@
       <button id="newGameButton">New Game</button>
     </div>
   </div>
-  <script src="script.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
