--- a/login&signup.html
+++ b/login&signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="/css/login&signup.css">
     <title>Login</title>
 </head>
 <body>
@@ -19,6 +19,6 @@
                 <button type="button" onclick="login()">Login</button>
             </form>
         </div>
-    <script src="/js/login.js"></script>
+    <script src="/js/login&signup.js"></script>
 </body>
 </html>
